syntax = "proto3";

package calc;
option go_package="/calculator/calcpb";

message Calc{
    uint32 num_one = 1;
    uint32 num_two = 2;
}

message Primes {
    uint32 num =1;
}

message PrimesRequest {
    Primes primes =1;
}

message PrimesResponse {
    string result =1;
}

message CalcRequest {
    Calc calc =1;
}

message CalcResponse {
    uint32 result =1;
}

service CalcService{
    rpc Calc(CalcRequest) returns (CalcResponse) {};
    rpc Primes(PrimesRequest) returns (stream PrimesResponse) {};
}